WIP adding chatbot - 3

--- a/index.html
+++ b/index.html
@@ -1227,22 +1227,22 @@
     </script>
 
     <script>
-      window.addEventListener("load", function () {
-        var container = document.querySelector(".book-cta");
-        if (container) {
-          clearInterval(interval);
-          setTimeout(function () {
-            // Clear existing content
-            container.innerHTML = "";
+      // window.addEventListener("load", function () {
+      //   var container = document.querySelector(".book-cta");
+      //   if (container) {
+      //     clearInterval(interval);
+      //     setTimeout(function () {
+      //       // Clear existing content
+      //       container.innerHTML = "";
 
-            // Create the iframe element
-            var bot = document.createElement("div");
+      //       // Create the iframe element
+      //       var bot = document.createElement("div");
 
-            // Append the iframe to the container
-            container.appendChild(iframe);
-          }, 500); // Adjust this delay as necessary
-        }
-      });
+      //       // Append the iframe to the container
+      //       container.appendChild(iframe);
+      //     }, 500); // Adjust this delay as necessary
+      //   }
+      // });
     </script>
   </body>
 </html>
