--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       src="_next/static/sYITaXtL1HkCpSf5jaP2H/_ssgManifest.js"
       defer=""
     ></script>
-    <script defer>
+    <!-- <script>
       window.addEventListener("load", function () {
         var container = document.querySelector(".book-cta");
         if (container) {
@@ -129,19 +129,18 @@
 
           // Create the div element for the chatbot
           var botDiv = document.createElement("div");
-          botDiv.id = "vaccin_bot"; // Setting the ID to "vaccin_bot"
+          botDiv.id = "vaccin_bot"; // The ID expected by the embedded app
 
           // Append the div to the container
           container.appendChild(botDiv);
 
-          // Assuming you want to load the chatbot script here
+          // Load the chatbot script
           var script = document.createElement("script");
           script.src = "https://chatbot.snabbvaccin.se/embed.js"; // URL to your chatbot embed script
-          script.async = true;
           document.body.appendChild(script);
         }
       });
-    </script>
+    </script> -->
     <style
       data-href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     >
@@ -1226,23 +1225,13 @@
       }
     </script>
 
-    <script>
-      // window.addEventListener("load", function () {
-      //   var container = document.querySelector(".book-cta");
-      //   if (container) {
-      //     clearInterval(interval);
-      //     setTimeout(function () {
-      //       // Clear existing content
-      //       container.innerHTML = "";
-
-      //       // Create the iframe element
-      //       var bot = document.createElement("div");
-
-      //       // Append the iframe to the container
-      //       container.appendChild(iframe);
-      //     }, 500); // Adjust this delay as necessary
-      //   }
-      // });
+    <!-- Load the embed.js script which will in turn load the chatbot application -->
+    <script
+      type="module"
+      src="https://chatbot.snabbvaccin.se/embed.js"
+    ></script>
+    <script type="module">
+      // mountChatbot(".book-cta");
     </script>
   </body>
 </html>
