hides errorous locations display

--- a/index.html
+++ b/index.html
@@ -1244,6 +1244,10 @@
           window.open('https://nyalegehuset.se', '_blank');
 
         } )
+        const locationsSection = document.querySelector('.section-header')
+        locationsSection.style.display = 'none';
+        const locations = document.querySelector('.locations-container')
+        locations.style.display = 'none';
       });
       // mountChatbot(".book-cta");
     </script>
